# carrot-db

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE
cmd/: CMakeLists.txt
cmd/bing/: CMakeLists.txt  main.cc
cmd/server/: CMakeLists.txt  main.cc
include/carrotdb/: api_service.h  carrot_db.h  request.h  service.h
include/carrotdb/adapters/: api_service.h  get_request.h  key_db.h  kv_service.h  path_to_key_id_service.h  post_request.h  repository.h  request.h  service.h
include/carrotdb/app/: app.h  carrot_db.h
include/carrotdb/model/: key.h  value.h
include/carrotdb/ports/: key_create_service.h  key_get_service.h  key_repository.h  key_services.h  key_value.h  path_to_key_id.h  repository.h
src/: CMakeLists.txt
src/adapters/: CMakeLists.txt  api_service.cc  api_service_test.cc  get_request.cc  get_request_test.cc  key_db.cc  kv_service.cc  path_to_key_id_service.cc  post_request.cc  post_request_test.cc  request.cc  request_test.cc
src/api/: CMakeLists.txt  api_service.cc  api_service_test.cc
src/app/: CMakeLists.txt  app.cc  carrot_db.cc
src/carrot_db/: CMakeLists.txt  carrot_db.cc
src/model/: CMakeLists.txt  value.cc  value_test.cc
src/ports/: CMakeLists.txt  key.cc  key_services.cc
test/: CMakeLists.txt
test/functional/: CMakeLists.txt
test/functional/performance/: CMakeLists.txt  performance_tests.cc
test/functional/rest/: CMakeLists.txt  rest_tests.cc
